fix element visibility, fix outline button position, add to js

--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -66,6 +66,8 @@
   .btn-outline {
     margin-top: 3rem;
     margin-bottom: 1rem;
+    margin-right: 0;
+    justify-self: center;
   }
 
   // Components
