--- a/scss/components/_game-container.scss
+++ b/scss/components/_game-container.scss
@@ -46,13 +46,14 @@
   }
 
   &_result {
+    display: none;
+
     position: absolute;
     width: 210px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
 
-    display: flex;
     flex-direction: column;
     gap: 1.25rem;
     align-items: center;
